[ADDED] Added NutsUtilsStrings